# cll-telemetry

./: CMakeLists.txt
include/cll/: buffered_event_batch.h  configuration.h  configuration_cache.h  configuration_manager.h  event.h  event_batch.h  event_manager.h  event_serializer.h  event_serializer_extensions.h  event_upload_request.h  event_upload_source.h  event_upload_step.h  event_uploader.h  file_backed_event_batch.h  file_event_batch.h  memory_event_batch.h  multi_file_event_batch.h  task_with_delay_thread.h
include/cll/http/: http_request.h
src/: buffered_event_batch.cpp  buffered_event_batch_private.h  configuration.cpp  curl_helper.h  event_manager.cpp  event_serializer.cpp  event_serializer_extensions.cpp  event_serializer_extensions.h  event_uploader.cpp  file_backed_event_batch.cpp  file_configuration_cache.cpp  file_event_batch.cpp  memory_event_batch.cpp  multi_file_event_batch.cpp  task_with_delay_thread.cpp
src/http/: curl_error.h  curl_request.cpp  curl_request.h  http_request.cpp  http_request.h  http_response.h
test/: CMakeLists.txt  event_batch.cpp  event_serializer.cpp  event_uploader.cpp  file_backed_event_batch.cpp  file_event_batch.cpp  memory_event_batch.cpp  multi_file_event_batch.cpp
